fixed spacing issues on contact page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -880,7 +880,6 @@ color: white;
 .conheadings {
   color: white;
   padding-top: 5vh;
-  height: 100vh;
   width: calc(100vw - ((100vw - 100%)));
   overflow: hidden;
 }
@@ -905,7 +904,8 @@ color: white;
 }
 
 .input-container {
-    padding-left: 3vw;
+  padding-left: 1.5vw;
+  padding-right: 1.5vw;
     display: -ms-flexbox; /* IE10 */
     display: flex;
     width: 100%;
